# Root-Finder

./: LICENSE  README.md  ReadMe.md
root_finder/: CMakeLists.txt  README.md
root_finder/example/: root_finder_example.cpp
root_finder/example/JenkinsTraub/: jt.cpp  jt.h
root_finder/include/root_finder/: root_finder.h  root_finder.hpp
root_finder/src/: root_finder.cpp  root_finder_example.cpp
